--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.0.17",
     "og-parser": "^1.0.5",
     "qr-image": "^3.2.0",
+    "serve-favicon": "^2.5.0",
     "shortid": "^2.2.8",
     "uuid": "^3.2.1",
     "validate.js": "^0.12.0",
