--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "shortener",
-  "version": "2.0.0",
-  "description": "The most useful API to short URL's",
-  "main": "app.js",
-  "scripts": {
-    "dev": "nodemon .",
-    "debug": "node inspect ."
-  },
-  "author": "dannegm",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "connect": "^3.6.6",
-    "connect-mongo": "^2.0.1",
-    "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "mocha": "^5.1.1",
-    "moment": "^2.22.1",
-    "mongoose": "^5.0.17",
-    "og-parser": "^1.0.5",
-    "qr-image": "^3.2.0",
-    "serve-favicon": "^2.5.0",
-    "shortid": "^2.2.8",
-    "uuid": "^3.2.1",
-    "validate.js": "^0.12.0",
-    "winston": "^2.4.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.17.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/dannegm/shortener.git"
-  },
-  "bugs": {
-    "url": "https://github.com/dannegm/shortener/issues"
-  },
-  "homepage": "https://github.com/dannegm/shortener#readme"
+    "name": "shortener",
+    "version": "3.0.0",
+    "description": "The most useful API to short URL's",
+    "main": "app.js",
+    "scripts": {
+        "dev": "nodemon --exec babel-node .",
+        "debug": "node inspect ."
+    },
+    "author": "dannegm",
+    "license": "MIT",
+    "dependencies": {
+        "@babel/polyfill": "^7.6.0",
+        "body-parser": "^1.18.2",
+        "cli-highlight": "^2.1.1",
+        "colors": "^1.4.0",
+        "cors": "^2.8.4",
+        "dotenv": "^5.0.1",
+        "express": "^4.17.1",
+        "express-session": "^1.15.6",
+        "helmet": "^3.21.2",
+        "moment": "^2.22.1",
+        "mongoose": "^5.0.17",
+        "serve-favicon": "^2.5.0",
+        "shortid": "^2.2.8",
+        "uuid": "^3.2.1",
+        "winston": "^2.4.4"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.6.4",
+        "@babel/core": "^7.6.4",
+        "@babel/node": "^7.6.3",
+        "@babel/preset-env": "^7.6.3",
+        "nodemon": "^1.17.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/dannegm/shortener.git"
+    },
+    "bugs": {
+        "url": "https://github.com/dannegm/shortener/issues"
+    },
+    "homepage": "https://github.com/dannegm/shortener#readme"
 }
