--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "moment": "^2.22.1",
         "mongoose": "^5.0.17",
         "serve-favicon": "^2.5.0",
-        "shortid": "^2.2.8",
         "uuid": "^3.2.1",
         "winston": "^2.4.4"
     },
@@ -31,6 +30,7 @@
         "@babel/core": "^7.6.4",
         "@babel/node": "^7.6.3",
         "@babel/preset-env": "^7.6.3",
+        "babel-plugin-module-resolver": "^3.2.0",
         "nodemon": "^1.17.3"
     },
     "repository": {
