--- a/now.json
+++ b/now.json
@@ -2,14 +2,11 @@
     "name": "shortener",
     "version": 2,
     "env": {
-        "HOSTNAME": "@HOSTNAME",
-        "PORT": "@PORT",
-        "SECRET": "@SECRET",
+        "SECRET": "@secret",
 
-        "MONGO_HOST": "@MONGO_HOST",
-        "MONGO_PORT": "@MONGO_PORT",
-        "MONGO_DATABASE": "@MONGO_DATABASE",
-        "MONGO_USER": "@MONGO_USER",
-        "MONGO_PASSWORD": "@MONGO_PASSWORD"
+        "MONGO_HOST": "@mongo_host",
+        "MONGO_DATABASE": "@mongo_database",
+        "MONGO_USER": "@mongo_user",
+        "MONGO_PASSWORD": "@mongo_password"
     }
 }
