Now.sh Supports - T_T

--- a/now.json
+++ b/now.json
@@ -1,6 +1,12 @@
 {
     "name": "shortener",
     "version": 2,
+    "builds": [
+        {
+            "src": "src/index.js",
+            "use": "@now/node-server"
+        }
+    ],
     "env": {
         "SECRET": "@secret",
 
