--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "shortener",
     "version": "3.0.0",
     "description": "The most useful API to short URL's",
-    "main": "app.js",
+    "main": "src/index.js",
     "scripts": {
         "start": "npm run dev",
         "dev": "nodemon --exec babel-node src",
-        "build": "babel src --out-dir public",
+        "build": "babel src --out-dir dist",
         "debug": "node inspect src",
         "deploy": "now --prod"
     },
