--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "MIT",
     "dependencies": {
         "@babel/polyfill": "^7.6.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.2",
         "cli-highlight": "^2.1.1",
         "colors": "^1.4.0",
@@ -23,6 +24,7 @@
         "express": "^4.17.1",
         "express-session": "^1.15.6",
         "helmet": "^3.21.2",
+        "jsonwebtoken": "^8.5.1",
         "moment": "^2.22.1",
         "mongoose": "^5.0.17",
         "serve-favicon": "^2.5.0",
