--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "The most useful API to short URL's",
     "main": "src/index.js",
     "scripts": {
-        "start": "npm run dev",
+        "start": "node --exec babel-node src",
         "dev": "nodemon --exec babel-node src",
         "prod": "pm2 start src --interpreter babel-node",
-        "build": "babel src --out-dir dist",
+        "build:dist": "babel src --out-dir dist",
         "debug": "node inspect src",
         "deploy": "now --prod"
     },
