--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
     "name": "shortener",
     "version": "3.0.0",
     "description": "The most useful API to short URL's",
-    "main": "src/index.js",
     "scripts": {
-        "start": "PORT=80 node --exec babel-node src",
+        "start": "node --exec babel-node src",
         "dev": "nodemon --exec babel-node src",
         "prod": "pm2 start src --interpreter babel-node",
         "build:dist": "babel src --out-dir dist",
