--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "moment": "^2.22.1",
         "mongoose": "^5.0.17",
         "serve-favicon": "^2.5.0",
+        "swagger-ui-express": "^4.1.2",
         "uuid": "^3.2.1",
-        "winston": "^2.4.4"
+        "winston": "^2.4.4",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.6.4",
