--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,14 @@
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+user nginx;
+worker_processes 1;
+pid /var/run/nginx.pid;
 
-    log_format  main
-                    '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log  /var/log/nginx/shortener.log main;
+events {
+    worker_connections 1024;
+}
+
+http {
+    access_log /var/log/nginx/shortener.access.log;
+    error_log  /var/log/nginx/shortener.error.log;
 
     keepalive_timeout  65;
     server {
@@ -24,6 +26,10 @@ http {
         }
 
         location / {
+            proxy_pass_header Server;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Scheme $scheme;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_pass http://localhost:3000/;
         }
     }
