--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.22.1",
         "mongoose": "^5.0.17",
+        "open-graph-scraper": "^3.6.2",
+        "qrcode": "^1.4.4",
         "serve-favicon": "^2.5.0",
         "swagger-ui-express": "^4.1.2",
         "uuid": "^3.2.1",
